# ai-trade-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.engine  Makefile  README.md  docker-compose.yml  electron-builder.yml  electron.vite.config.1782980114627.mjs  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts
.github/workflows/: ci.yml
contracts/: ArbExecutor.sol
data/: state.json  strategies.json
engine/: app.py  models.py  requirements.txt
engine/analytics/: __init__.py  metrics.py
engine/arbitrage/: cross_chain.py  scanner.py
engine/backtest/: backtester.py  multi_backtest.py  run_live_backtest.py  walk_forward.py
engine/bot/: orchestrator.py
engine/config/: chains.py  settings.py
engine/dex/: abis.py  execution.py  gas.py  oracle.py  uniswap_v2.py  uniswap_v3.py
engine/indicators/: advanced.py  patterns.py  technical.py
engine/marketdata/: __init__.py  aggregator.py  analyst.py  binance.py  chart.py  coingecko.py  derivatives.py  dexscreener.py  http.py  hyperliquid.py  markets.py  news.py  news_watcher.py  onchain.py  solana.py  whales.py
engine/ml/: __init__.py  features.py  logistic.py  model.py  train.py
engine/notify/: __init__.py  notifier.py  summary.py
engine/risk/: manager.py  portfolio_risk.py
engine/security/: __init__.py  keystore.py  spending.py
engine/signals/: engine.py  llm.py
engine/sizing/: __init__.py  position_sizing.py
engine/storage/: db.py
engine/strategy/: __init__.py  (+7 more)
execd/: Cargo.toml  Dockerfile  README.md  TESTNET_RUNBOOK.md
execd/contracts/: execd.openapi.yaml
execd/core/: Cargo.toml
execd/core/src/: error.rs  idempotency.rs  lib.rs  nonce.rs  safety.rs  types.rs
execd/service/: Cargo.toml
execd/service/src/: config.rs  main.rs  metrics.rs  state.rs
execd/service/src/api/: arb.rs  mod.rs  perp.rs  simulate.rs  swap.rs
execd/service/src/evm/: abi.rs  flashbots.rs  mod.rs  provider.rs  router.rs
execd/service/src/perp/: hyperliquid.rs  mod.rs
notdata/: bot.db  state.json
scripts/: check_all.py  gen_types.py
tests/: test_backtest_advanced.py  test_chain_control.py  test_config.py  test_db.py  test_db_migrations.py  test_derivatives.py  test_exec_backend.py  test_financial_additions.py  test_financial_modules.py  test_gas.py  test_indicators.py  test_llm_layer.py  test_metrics.py  test_ml_signal.py  test_multi_strategy.py  test_new_strategies.py  test_news_watcher.py  test_notify.py  test_orchestrator_routing.py  test_paper_seed.py  test_patterns.py  test_presets_reset.py  test_resilience.py  test_risk_gates.py  test_security.py  test_short.py  test_signal_gate.py  test_sizing.py  test_smart_exec.py  test_strat_cfg.py  test_strategy.py  test_strategy_advisor.py  test_strategy_control.py  test_swing.py  test_tuning_mtf.py  test_types_gen.py  test_whales.py
(+54 files in other folders)
