# execd — emir-iletim servisi (ADR-0001). Cargo workspace.
[workspace]
members = ["core", "service"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
