[package]
name = "execd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "execd saf mantık: types, safety, nonce, idempotency (ağ-bağımsız, test edilir)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
dashmap.workspace = true
